# tarea-3-t3_ddv

./: README.md  benchmark.cpp  biquad.cpp  biquad.h  cascade copy.cpp  cascade copy.h  cascade.cpp  cascade.h  cascade.tpp  filter_client.cpp  filter_client.h  jack_client.cpp  main.cpp  meson.build  stats_handler.h  volume_controller.cpp  volume_controller.h
octave/: butter_bandpass.mat  butter_bandstop.mat  butter_highpass.mat  butter_lowpass.mat  calc_stats.m  cheby1_bandpass.mat  cheby1_bandstop.mat  cheby1_highpass.mat  cheby1_lowpass.mat  cheby2_bandpass.mat  cheby2_bandstop.mat  cheby2_highpass.mat  cheby2_lowpass.mat  design.m  design_filters.m  ellip_bandpass.mat  ellip_bandstop.mat  ellip_highpass.mat  ellip_lowpass.mat  historial.txt  listen_filter.m  octave-workspace  plot_filter.m  stats.txt
